--- a/index.css
+++ b/index.css
@@ -8,6 +8,11 @@ body {
   height: 100vh;
   width: 100vw;
   /* your properties here */
+  display: grid;
+  grid-template-rows: [header-start] 1fr [header-end] repeat(auto, 1fr);
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-gap: 5px
+
 }
 
 .grid-item {
@@ -15,4 +20,9 @@ body {
   border: 1px solid black;
 }
 
+
 /* add the .bigItem class */
+
+.bigItem {
+  grid-area: 2 / 2 / 4 / 4;
+}
