--- a/index.css
+++ b/index.css
@@ -8,6 +8,11 @@ body {
   height: 100vh;
   width: 100vw;
   /* your properties here */
+  display: grid;
+  grid-gap: 5px;
+  grid-auto-rows: 50px;
+  grid-template-rows: 1fr 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr;
 }
 
 .grid-item {
@@ -15,4 +20,13 @@ body {
   border: 1px solid black;
 }
 
+
+
 /* add the .bigItem class */
+.bigItem {
+  grid-area: 2 / 2 / 4 / 4;
+  height: 50%;
+  width: 50%;
+  justify-self: center;
+  align-self: center;
+}
