--- a/index.css
+++ b/index.css
@@ -5,9 +5,10 @@ body {
 }
 
 .grid-container {
+  display: grid;
   height: 100vh;
   width: 100vw;
-  /* your properties here */
+  grid-template: repeat(4, 1fr) / repeat(3, 1fr);
 }
 
 .grid-item {
@@ -15,4 +16,9 @@ body {
   border: 1px solid black;
 }
 
-/* add the .bigItem class */
+.bigItem {
+  grid-area: 2 / 2 / 4 / 4;
+  height: 50%;
+  width: 50%;
+  justify-self: center;
+}
