--- a/index.css
+++ b/index.css
@@ -7,12 +7,17 @@ body {
 .grid-container {
   height: 100vh;
   width: 100vw;
-  /* your properties here */
+  display: grid;
+  /* grid-template: 1fr 1fr 1fr 1fr / 1fr 1fr 1fr; */
+  grid-template: repeat(4, 1fr) / repeat(3, 1fr);
 }
 
 .grid-item {
-  background-color: grey;
+  background-color: pink;
   border: 1px solid black;
 }
 
 /* add the .bigItem class */
+.bigItem {
+  grid-area: 2 / 2 / 4 / 4;
+}
