--- a/index.css
+++ b/index.css
@@ -5,9 +5,11 @@ body {
 }
 
 .grid-container {
+  display: grid;
   height: 100vh;
   width: 100vw;
-  /* your properties here */
+  grid-template-rows: [header-start] 1fr [header-end] repeat(auto, 1fr);
+  grid-template-columns: 1fr 1fr 1fr;
 }
 
 .grid-item {
@@ -16,3 +18,10 @@ body {
 }
 
 /* add the .bigItem class */
+.bigItem {
+  grid-area: 2 / 2 / 4 / 4;
+  height: 50%;
+  width: 50%;
+  justify-self: center;
+  align-self: center;
+}
