--- a/index.css
+++ b/index.css
@@ -1,18 +1,22 @@
 html,
 body {
-  margin: 0;
-  padding: 0;
+	margin: 0;
+	padding: 0;
 }
 
 .grid-container {
-  height: 100vh;
-  width: 100vw;
-  /* your properties here */
+	height: 100vh;
+	width: 100vw;
+	/* your properties here */
 }
 
 .grid-item {
-  background-color: grey;
-  border: 1px solid black;
+	background-color: grey;
+	border: 1px solid black;
+	display: grid-template;
 }
 
 /* add the .bigItem class */
+.bigItem {
+	grid-area: 25;
+}
