--- a/index.css
+++ b/index.css
@@ -7,7 +7,9 @@ body {
 .grid-container {
   height: 100vh;
   width: 100vw;
-  /* your properties here */
+  display: grid;
+  grid-template: auto / 1fr 1fr 1fr;
+  /*grid-auto-rows: 50px;*/
 }
 
 .grid-item {
@@ -16,3 +18,10 @@ body {
 }
 
 /* add the .bigItem class */
+.bigItem {
+  grid-area: 2 / 2 / 4 / 4;
+  height: 50%;
+  width: 50%;
+  justify-self: center;
+  align-self: center
+}
