--- a/index.css
+++ b/index.css
@@ -5,6 +5,9 @@ body {
 }
 
 .grid-container {
+  display: grid;
+  grid-template-rows: [header-start] 1fr [header-end] repeat(auto, 1fr);
+  grid-template-columns: 1fr 1fr 1fr;
   height: 100vh;
   width: 100vw;
   /* your properties here */
@@ -16,3 +19,7 @@ body {
 }
 
 /* add the .bigItem class */
+
+.bigItem {
+  grid-area: 2 / 2 / 4 / 4;
+}
