--- a/index.css
+++ b/index.css
@@ -7,6 +7,9 @@ body {
 .grid-container {
   height: 100vh;
   width: 100vw;
+  display: grid;
+  grid-template-rows: [header-start] 1fr [header-end] repeat(auto, 1fr);
+  grid-template-columns: 1fr 1fr 1fr 1fr;
   /* your properties here */
 }
 
@@ -16,3 +19,9 @@ body {
 }
 
 /* add the .bigItem class */
+.bigItem {
+  grid-area: 2 / 2 / 4 / 4;
+  height: 50%;
+  width: 50%;
+  justify-self: center;
+}
