--- a/index.css
+++ b/index.css
@@ -7,7 +7,8 @@ body {
 .grid-container {
   height: 100vh;
   width: 100vw;
-  /* your properties here */
+  display: grid;
+  grid-template: auto / 1fr 1fr 1fr;
 }
 
 .grid-item {
@@ -15,4 +16,11 @@ body {
   border: 1px solid black;
 }
 
-/* add the .bigItem class */
+.bigItem {
+  /* grid-row: 2/4;
+  grid-column: 2/4; */
+  grid-area: 2 / 2 / 4 / 4;
+  height: 50%;
+  width: 50%;
+  justify-self: center;
+}
