--- a/index.css
+++ b/index.css
@@ -5,8 +5,11 @@ body {
 }
 
 .grid-container {
+  display: grid;
+  grid-template: 1fr 1fr 1fr 1fr / 1fr 1fr 1fr;
   height: 100vh;
   width: 100vw;
+  grid-gap: 5px;
   /* your properties here */
 }
 
@@ -15,4 +18,9 @@ body {
   border: 1px solid black;
 }
 
+.bigItem {
+  grid-area: 2 / 2 / 4 / 4;
+  height: 50%;
+  width: 50%;
+  justify-self: center;
 /* add the .bigItem class */
