--- a/index.css
+++ b/index.css
@@ -7,7 +7,11 @@ body {
 .grid-container {
   height: 100vh;
   width: 100vw;
-  /* your properties here */
+  display: grid;
+  grid-template: 1fr 1fr 1fr 1fr / 1fr 1fr 1fr;
+  grid-auto-rows: 50px;
+  grid-gap: 5px
+  
 }
 
 .grid-item {
@@ -16,3 +20,23 @@ body {
 }
 
 /* add the .bigItem class */
+/*.bigItem {*/
+/*  grid-row-start: 2;*/
+/*  grid-row-end: 4;*/
+/*  grid-column-start: 2;*/
+/*  grid-column-end: 4;*/
+/*}*/
+/*.bigItem {*/
+/*  grid-row: 2 / 4;*/
+/*  grid-column: 2 / 4;*/
+/*}*/
+
+/*grid-area: <grid-row-start> / <grid-column-start> / <grid-row-end> / <grid-column-end>*/
+
+.bigItem {
+  grid-area: 2 / 2 / 4 / 4;
+  height: 50%;
+  width: 50%;
+  justify-self: center;
+  align-self: center
+}
