--- a/index.css
+++ b/index.css
@@ -7,12 +7,16 @@ body {
 .grid-container {
   height: 100vh;
   width: 100vw;
-  /* your properties here */
+  display: grid;
+  grid-template-rows: 80px 200px;
 }
+
 
 .grid-item {
   background-color: grey;
   border: 1px solid black;
 }
 
-/* add the .bigItem class */
+.bigItem {
+ grid-area: 2 / 2 / 4 / 4;
+}
