--- a/index.css
+++ b/index.css
@@ -8,11 +8,22 @@ body {
   height: 100vh;
   width: 100vw;
   /* your properties here */
+  display: grid;
+  grid-auto-rows: 50px;
+  grid-template: [header-start] 1fr [header-end] 1fr 1fr 1fr / 1fr 1fr 1fr;
+  grid-gap: 5px;
 }
 
 .grid-item {
   background-color: grey;
   border: 1px solid black;
+
 }
 
 /* add the .bigItem class */
+.bigItem {
+  grid-area: footer-start / 1 / footer-end / 4;
+  height: 50%;
+  width: 50%;
+  justify-self: center;
+}
