--- a/index.css
+++ b/index.css
@@ -8,6 +8,9 @@ body {
   height: 100vh;
   width: 100vw;
   /* your properties here */
+  display: grid;
+  grid-template: 1fr 1fr 1fr 1fr / 1fr 1fr 1fr;
+  grid-gap: 5px;
 }
 
 .grid-item {
@@ -16,3 +19,20 @@ body {
 }
 
 /* add the .bigItem class */
+.bigItem {
+  /* grid-column-start: 2;
+  grid-column-end: 4;
+  grid-row-start: 2;
+  grid-row-end: 4; */
+
+  /* shorthand version of above */
+  /* grid-row: 2 / 4;
+  grid-column: 2 / 4; */
+
+  /* even shorter version */
+  grid-area: 2 / 2 / 4 / 4;
+  
+  height: 50%;
+  width: 50%;
+  justify-self: center;
+}
