--- a/index.css
+++ b/index.css
@@ -8,6 +8,8 @@ body {
   height: 100vh;
   width: 100vw;
   /* your properties here */
+  display: grid;
+  grid-template: auto 5fr / auto 5fr auto/
 }
 
 .grid-item {
@@ -16,3 +18,7 @@ body {
 }
 
 /* add the .bigItem class */
+
+.bigItem {
+  grid-area: 4 / 4 / 4 / 4;
+}
