--- a/index.css
+++ b/index.css
@@ -2,11 +2,15 @@ html,
 body {
   margin: 0;
   padding: 0;
+  background-color: red;
 }
 
 .grid-container {
   height: 100vh;
   width: 100vw;
+  display: grid;
+  grid-template: repeat(6 * 1fr) / 1fr 1fr;
+  grid-gap: 10px;
   /* your properties here */
 }
 
@@ -16,3 +20,11 @@ body {
 }
 
 /* add the .bigItem class */
+
+.bigItem {
+  grid-area: 2 / 2 / 4 / 4;
+  height: 50%;
+  width: 50%;
+  justify-self: center;
+  align-self: center;
+}
