--- a/index.css
+++ b/index.css
@@ -7,12 +7,19 @@ body {
 .grid-container {
   height: 100vh;
   width: 100vw;
-  /* your properties here */
+  display: grid;
+  grid-template: auto / 1fr 1fr 1fr;
+  grid-gap: 5px;
 }
 
 .grid-item {
-  background-color: grey;
+  background-color: mediumaquamarine;
   border: 1px solid black;
 }
 
 /* add the .bigItem class */
+.bigItem {
+  /* grid-area: 2 / 2 / 4 / 4; */
+  grid-area: footer-start / 1 / footer-end / 4;
+  justify-self: center;
+}
