--- a/index.css
+++ b/index.css
@@ -7,7 +7,8 @@ body {
 .grid-container {
   height: 100vh;
   width: 100vw;
-  /* your properties here */
+  display: grid;
+ grid-template: 1fr 1fr 1fr 1fr / 1fr 1fr 1fr;
 }
 
 .grid-item {
@@ -15,4 +16,10 @@ body {
   border: 1px solid black;
 }
 
-/* add the .bigItem class */
+.bigItem {
+  grid-column-start: 1;
+  grid-column-end: 3;
+  grid-row-start: 1;
+  grid-row-end: 3;
+  grid-area: <grid-row-start> / <grid-column-start> / <grid-row-end> / <grid-column-end>
+}
