--- a/index.css
+++ b/index.css
@@ -8,6 +8,8 @@ body {
   height: 100vh;
   width: 100vw;
   /* your properties here */
+  display: grid;
+  grid-template: auto / 1fr 1fr 1fr;
 }
 
 .grid-item {
@@ -16,3 +18,25 @@ body {
 }
 
 /* add the .bigItem class */
+.bigItem {
+  grid-area: 2 / 2 / 4 / 4;
+  height: 50%;
+  width: 50%;
+  justify-self: center;
+  align-self: center;
+}
+
+/* grid-area: <grid-row-start> / <grid-column-start> / <grid-row-end> / <grid-column-end>
+same as 
+.bigItem {
+  grid-row-start: 2;
+  grid-row-end: 4;
+  grid-column-start: 2;
+  grid-column-end: 4;
+}
+and
+.bigItem {
+  grid-row: 2 / 4;
+  grid-column: 2 / 4;
+}
+*/
