--- a/index.css
+++ b/index.css
@@ -7,12 +7,18 @@ body {
 .grid-container {
   height: 100vh;
   width: 100vw;
+  grid-template: grid;
+  display: grid;
   /* your properties here */
 }
 
 .grid-item {
   background-color: grey;
   border: 1px solid black;
+}
+
+.bigItem {
+  grid-area: ;
 }
 
 /* add the .bigItem class */
