--- a/index.css
+++ b/index.css
@@ -8,6 +8,8 @@ body {
   height: 100vh;
   width: 100vw;
   /* your properties here */
+  grid-template: grid;
+  display: grid;
 }
 
 .grid-item {
@@ -16,3 +18,6 @@ body {
 }
 
 /* add the .bigItem class */
+.bigItem {
+   grid-area: ;
+ }
