--- a/index.css
+++ b/index.css
@@ -8,6 +8,11 @@ body {
   height: 100vh;
   width: 100vw;
   /* your properties here */
+  display: grid;
+  grid-template: [header-start] 1fr [header-end] 1fr 1fr 1fr/ 1fr 1fr 1fr;
+  /* grid-template: repeat(4, lfr) / repeat(3, 1fr); */
+  grid-auto-rows: 50;
+  grid-gap: 5px;
 }
 
 .grid-item {
@@ -16,3 +21,16 @@ body {
 }
 
 /* add the .bigItem class */
+.bigItem {
+  grid-area: 2/2/4/4;
+  height: 50%;
+  width: 50%;
+  justify-self: baseline;
+  align-self: baseline;
+  /* grid-column: 2 / 4;
+  grid-row: 2 / 4; */
+  /* grid-column-start: 2;
+  grid-column-end: 4;
+  grid-row-start: 2;
+  grid-row-end: 4; */
+}
