--- a/index.css
+++ b/index.css
@@ -7,8 +7,12 @@ body {
 .grid-container {
   height: 100vh;
   width: 100vw;
+  display:grid;
   /* your properties here */
-}
+  display: grid;
+  grid-template-rows: [header-start] 1fr [header-end] 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr;
+  }
 
 .grid-item {
   background-color: grey;
@@ -16,3 +20,6 @@ body {
 }
 
 /* add the .bigItem class */
+.bigItem {
+  grid-area: 2 / 2 / 4 / 4;
+}
