--- a/index.css
+++ b/index.css
@@ -8,11 +8,23 @@ body {
   height: 100vh;
   width: 100vw;
   /* your properties here */
+  display: grid;
+  grid-template: repeat(4, 1fr) / repeat(3, 1fr);
+  grid-auto-rows: 50px;
+  grid-gap: 5px;
 }
 
 .grid-item {
   background-color: grey;
   border: 1px solid black;
+}
+
+.bigItem {
+  grid-area: 2 / 2 / 4 / 4;
+  height: 50%;
+  width: 50%;
+  justify-self: center;
+  align-self: center
 }
 
 /* add the .bigItem class */
