--- a/index.css
+++ b/index.css
@@ -7,7 +7,10 @@ body {
 .grid-container {
   height: 100vh;
   width: 100vw;
-  /* your properties here */
+  display: grid;
+  grid-template: repeat(4, 1fr)  / repeat(3,1fr) ;
+  grid-template: [header-start] 1fr [header-end] 1fr 1fr 1fr  / 1fr 1fr 1fr ;
+  gap: 5px;
 }
 
 .grid-item {
@@ -15,4 +18,10 @@ body {
   border: 1px solid black;
 }
 
+ .bigItem{
+   grid-area: 2 / 2 / 4 /  4;
+   height:50%;
+   width:50%;
+   justify-self: center;
+ }
 /* add the .bigItem class */
