--- a/index.css
+++ b/index.css
@@ -5,6 +5,9 @@ body {
 }
 
 .grid-container {
+  display: grid;
+  grid-template: auto/ 1fr 1fr 1fr;
+  grid-gap: 5px;
   height: 100vh;
   width: 100vw;
   /* your properties here */
@@ -15,4 +18,10 @@ body {
   border: 1px solid black;
 }
 
-/* add the .bigItem class */
+.bigItem {
+  grid-area: 2/2/4/4;
+  height: 50%;
+  width: 50%;
+  align-self: center;
+
+}
