--- a/index.css
+++ b/index.css
@@ -8,11 +8,18 @@ body {
   height: 100vh;
   width: 100vw;
   /* your properties here */
+  display: grid;
+  grid-template-rows: [header-start] 1fr [header-end] repeat(auto, 1fr);
+  grid-template-columns: 1fr 1fr 1fr;
 }
 
 .grid-item {
   background-color: grey;
   border: 1px solid black;
+  padding: 5px;
 }
 
 /* add the .bigItem class */
+.bigItem {
+  grid-area: 2 / 2 / 4 / 4;
+} 
