--- a/index.css
+++ b/index.css
@@ -8,6 +8,10 @@ body {
   height: 100vh;
   width: 100vw;
   /* your properties here */
+  display: grid;
+  grid-template: auto / 1fr 1fr 1fr
+
+  grid-gap: 5px
 }
 
 .grid-item {
@@ -16,3 +20,6 @@ body {
 }
 
 /* add the .bigItem class */
+.bigItem {
+  grid-area: 2 / 2 / 4 / 4;
+}
