--- a/index.css
+++ b/index.css
@@ -8,6 +8,10 @@ body {
   height: 100vh;
   width: 100vw;
   /* your properties here */
+  display: grid;
+  grid-template: auto / 1fr 1fr 1fr 1fr;
+  grid-gap: 5px, white;
+  grid-area: footer-start / 1 / footer-end / 4
 }
 
 .grid-item {
@@ -16,3 +20,16 @@ body {
 }
 
 /* add the .bigItem class */
+/*.bigItem {*/
+/*  grid-column-start: 1;*/
+/*  grid-column-end: 3;*/
+/*  grid-row-start: 1;*/
+/*  grid-row-end: 3;*/
+/*}*/
+
+.bigItem {
+  grid-area: 2 / 2 / 4 / 4;
+  height: 50%;
+  width: 50%;
+  justify-self: center;
+}
