--- a/index.css
+++ b/index.css
@@ -8,6 +8,10 @@ body {
   height: 100vh;
   width: 100vw;
   /* your properties here */
+  display: grid;
+  grid-template: grid;
+  grid-auto-rows: 20px;
+  grid-gap: 5px
 }
 
 .grid-item {
@@ -16,3 +20,11 @@ body {
 }
 
 /* add the .bigItem class */
+.bigItem {
+  grid-area: 2 / 2 / 4 / 4;
+  height: 50%;
+  width: 50%;
+  justify-self: center;
+  align-self: center
+
+}
