--- a/index.css
+++ b/index.css
@@ -1,18 +1,31 @@
 html,
 body {
-  margin: 0;
-  padding: 0;
+    margin: 0;
+    padding: 0;
 }
 
 .grid-container {
-  height: 100vh;
-  width: 100vw;
-  /* your properties here */
+    height: 100vh;
+    width: 100vw;
+    /* your properties here */
+    display: grid;
+    grid-template: [header-start] 1fr [header-end] 1fr 1fr 1fr / 1fr 1fr 1fr;
+    */
+    /* grid-auto-rows: 50px;*/
+    grid-gap: 5px;
 }
 
 .grid-item {
-  background-color: grey;
-  border: 1px solid black;
+    background-color: grey;
+    border: 1px solid black;
 }
 
+
 /* add the .bigItem class */
+
+.bigItem {
+    grid-area: 2 / 2 / 4 / 4;
+    height: 50%;
+    width: 50%;
+    justify-self: center;
+}
