--- a/index.css
+++ b/index.css
@@ -5,6 +5,9 @@ body {
 }
 
 .grid-container {
+  grid-gap: 5px;
+  display: grid;
+  grid-template: auto/ 1fr 1fr 1fr;
   height: 100vh;
   width: 100vw;
   /* your properties here */
@@ -16,3 +19,10 @@ body {
 }
 
 /* add the .bigItem class */
+.bigItem {
+  grid-area: 2 / 2 / 4 / 4;
+  height: 50%;
+  width: 50%;
+  justify-self: center;
+  align-self: center;
+}
