--- a/index.css
+++ b/index.css
@@ -8,6 +8,12 @@ body {
   height: 100vh;
   width: 100vw;
   /* your properties here */
+  display: grid; 
+  grid-template: repeat(4, 1fr) / repeat(3, 1fr)
+  /*auto/ 2fr 2fr 2fr;*/
+  grid-template: [header-start] 1fr [header-end] 1fr 1fr 1fr / 1fr 1fr 1fr;
+  grid-auto-rows: 50px;
+  grid-gap: 5px; 
 }
 
 .grid-item {
@@ -16,3 +22,16 @@ body {
 }
 
 /* add the .bigItem class */
+
+.bigitem {
+
+  grid-column-start: 1px;
+  grid-column-end: 3px;
+  grid-row-start: 1px;
+  grid-row-end: 3px;
+}
+
+.bigitem {
+  
+  
+}
