--- a/index.css
+++ b/index.css
@@ -11,7 +11,7 @@ body {
   display: grid; 
   grid-template: repeat(4, 1fr) / repeat(3, 1fr)
   /*auto/ 2fr 2fr 2fr;*/
-  grid-template: [header-start] 1fr [header-end] 1fr 1fr 1fr / 1fr 1fr 1fr;
+  grid-template-rows: [header-start] 1fr [header-end] 1fr 1fr 1fr;
   grid-auto-rows: 50px;
   grid-gap: 5px; 
 }
@@ -23,15 +23,9 @@ body {
 
 /* add the .bigItem class */
 
-.bigitem {
-
-  grid-column-start: 1px;
-  grid-column-end: 3px;
-  grid-row-start: 1px;
-  grid-row-end: 3px;
-}
-
-.bigitem {
-  
-  
+.bigItem {
+  grid-area: 2 / 2 / 4 / 4;
+  height: 50%;
+  width: 50%;
+  justify-self: center;
 }
