--- a/index.css
+++ b/index.css
@@ -8,12 +8,9 @@ body {
   height: 100vh;
   width: 100vw;
   /* your properties here */
-  display: grid; 
-  grid-template: repeat(4, 1fr) / repeat(3, 1fr)
-  /*auto/ 2fr 2fr 2fr;*/
-  grid-template-rows: [header-start] 1fr [header-end] 1fr 1fr 1fr;
-  grid-auto-rows: 50px;
-  grid-gap: 5px; 
+  display: grid;
+  grid-template-rows: [header-start] 1fr [header-end] repeat(auto, 1fr);
+  grid-template-columns: 1fr 1fr 1fr;
 }
 
 .grid-item {
@@ -25,7 +22,4 @@ body {
 
 .bigItem {
   grid-area: 2 / 2 / 4 / 4;
-  height: 50%;
-  width: 50%;
-  justify-self: center;
 }
