--- a/index.css
+++ b/index.css
@@ -8,6 +8,7 @@ body {
   height: 100vh;
   width: 100vw;
   /* your properties here */
+  display: grid-template;
 }
 
 .grid-item {
@@ -16,3 +17,7 @@ body {
 }
 
 /* add the .bigItem class */
+
+.bigItem {
+  grid-area: 2/2/4/4;
+}
