--- a/index.css
+++ b/index.css
@@ -8,11 +8,32 @@ body {
   height: 100vh;
   width: 100vw;
   /* your properties here */
+  display: grid;
+  /*grid-template: 1fr 1fr 1fr 1fr 1fr / 1fr 1fr 1fr;  /*4 rows and 3 columns*/*/
+  /*change row or columns size 1fr 1fr 2fr 1fr / 1fr 1fr 2fr; */
+  grid-template-rows: : repeat(4, 1fr);
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 5px;
 }
 
 .grid-item {
   background-color: grey;
   border: 1px solid black;
+}
+
+.bigItem {
+ /*grid-column-start: 2;
+ grid-column-end: 4;
+ grid-row-start: 2;
+ grid-row-end: 4;*/  /*or*/
+ /*grid-row: 2/4;
+ grid-column: 2/4;*/
+ grid-area: 2/2/4/4; /*<grid-row-start> / <grid-column-start> / <grid-row-end> / <grid-column-end>
+*/
+ height: 50%;
+ width: 50%;
+ justify-self: center;
+ align-self: center;
 }
 
 /* add the .bigItem class */
