--- a/index.css
+++ b/index.css
@@ -7,6 +7,7 @@ body {
 .grid-container {
   height: 100vh;
   width: 100vw;
+  display: grid-template;
   /* your properties here */
 }
 
@@ -16,3 +17,6 @@ body {
 }
 
 /* add the .bigItem class */
+.bigItem {
+  display: grid-area;
+}
