--- a/index.css
+++ b/index.css
@@ -7,7 +7,19 @@ body {
 .grid-container {
   height: 100vh;
   width: 100vw;
-  /* your properties here */
+  display: grid;
+  /* grid-template: auto / 50px auto 25%; */
+  /* grid-template: repeat(4, 1fr) / repeat(3, 1fr); */
+  /* grid-template-rows: [header-start] 1fr [header-end] 1fr 1fr 1fr; */
+  /* grid-template-rows: repeat(2, 1fr);
+  grid-template-columns: repeat(3, 1fr);
+  grid-auto-rows: 50px; */
+
+  grid-template: repeat(3, 1fr) / repeat(3, 1fr);
+  /* grid-gap: 5px; */
+  /* gap: 5%; This works too and is preferred; grid-gap is becoming obsolete. */
+  grid-gap: 2.5%;
+  grid-auto-rows: 50px;
 }
 
 .grid-item {
