--- a/index.css
+++ b/index.css
@@ -3,11 +3,13 @@ body {
   margin: 0;
   padding: 0;
 }
-
 .grid-container {
   height: 100vh;
   width: 100vw;
   /* your properties here */
+  display: grid;
+  grid-template: repeat(4, 1fr) / repeat(3, 1fr);
+  grid-gap: 5px;
 }
 
 .grid-item {
@@ -16,3 +18,9 @@ body {
 }
 
 /* add the .bigItem class */
+.bigItem {
+  grid-area: 2 / 2 / 4 / 4 ;
+  height: 50%;
+  width: 50%;
+  justify-self: center;
+}
