--- a/index.css
+++ b/index.css
@@ -5,6 +5,9 @@ body {
 }
 
 .grid-container {
+  display: grid;
+  grid-template: [header-start] 1fr [header-end] repeat(3, 1fr) / repeat(3, 1fr);
+  grid-gap: 5px
   height: 100vh;
   width: 100vw;
   /* your properties here */
@@ -16,3 +19,6 @@ body {
 }
 
 /* add the .bigItem class */
+.bigItem {
+  grid-area: 2 / 2/ 4 /4;
+}
